- adding basic video demo, with no webgl for testing on mobile. - fixes for build dependancies.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "Web Audio API"
   ],
   "devDependencies": {
+    "copy-webpack-plugin": "^3.0.1",
     "webpack": "^1.13.0"
   },
   "scripts": {
