dev branch upstream for 0.2.0 release: - Implemented FOAConvolver, FOARenderer for optimized rendering. - Added unit test for FOAConvolver. - Rearranged examples/ directory.

--- a/.npmignore
+++ b/.npmignore
@@ -1,1 +1,16 @@
+# NPM modules must include the production build and related files.
+doc/
 examples/
+pvt/
+src/
+test/
+
+.firebaserc
+.gitignore
+404.html
+CONTRIBUTING.md
+database.rules.json
+firebase.json
+index.html
+webpack.config.all.js
+webpack.config.js
