--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   ],
   "devDependencies": {
     "copy-webpack-plugin": "^3.0.1",
-    "webpack": "^1.13.0"
+    "webpack": "^1.13.0",
+    "chai": "^3.5.0",
+    "mocha": "^3.0.0"
   },
   "scripts": {
     "build": "webpack --progress --color",
