use build/omnitone.js as module entry instead of src/main.js

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "omnitone",
   "version": "0.2.0",
   "description": "Spatial Audio Decoder in Web Audio API",
-  "main": "src/main.js",
+  "main": "build/omnitone.js",
   "keywords": [
     "spatial audio",
     "ambisonic",
