piloting travis-karma CI testing

--- a/package.json
+++ b/package.json
@@ -11,15 +11,21 @@
     "Web Audio API"
   ],
   "devDependencies": {
-    "copy-webpack-plugin": "^3.0.1",
-    "webpack": "^1.13.0",
     "chai": "^3.5.0",
-    "mocha": "^3.0.0"
+    "copy-webpack-plugin": "^3.0.1",
+    "karma": "^1.6.0",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.3",
+    "mocha": "^3.0.0",
+    "webpack": "^1.13.0"
   },
   "scripts": {
     "build": "webpack --progress --color",
     "watch": "webpack --progress --color --watch",
-    "build-all": "webpack --config webpack.config.all.js --progress --color"
+    "build-all": "webpack --config webpack.config.all.js --progress --color",
+    "test": "node_modules/karma/bin/karma start"
   },
   "homepage": "https://github.com/GoogleChrome/omnitone",
   "bugs": {
