--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,9 @@ language: node_js
 node_js:
   - 0.8
 
+before_install:
+  - '[ "${TRAVIS_NODE_VERSION}" != "0.8" ] || npm install -g npm@1.4.28'
+  - npm install -g npm@latest
+
 before_script:
   - export CHROME_BIN=chromium-browser
