--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: node_js
 
 node_js:
-  - 0.10
+  - 7
 
 before_install:
   - '[ "${TRAVIS_NODE_VERSION}" != "0.8" ] || npm install -g npm@1.4.28'
@@ -10,3 +10,4 @@ before_install:
 before_script:
   - export CHROME_BIN=chromium-browser
   - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
