--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,14 @@
+dist: trusty
+
 language: node_js
 
 node_js:
   - 7
+
+addons:
+  apt:
+    packages:
+      - google-chrome-stable
 
 before_install:
   - '[ "${TRAVIS_NODE_VERSION}" != "0.8" ] || npm install -g npm@1.4.28'
@@ -11,3 +18,4 @@ before_script:
   - export CHROME_BIN=chromium-browser
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
+  - sleep 3
