--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,6 @@ addons:
 
 before_script:
   - export CHROME_BIN=chromium-browser
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+  - sleep 3
