--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,14 @@ addons:
     packages:
       - google-chrome-stable
 
+install:
+  - npm install
+
 before_script:
   - export CHROME_BIN=chromium-browser
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
   - sleep 3
+
+script:
+  - npm test
