--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "omnitone",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "Spatial Audio Decoder in Web Audio API",
   "main": "build/omnitone.js",
   "keywords": [
@@ -24,7 +24,7 @@
   "scripts": {
     "build": "webpack --progress --color",
     "watch": "webpack --progress --color --watch",
-    "build-all": "webpack --config webpack.config.all.js --progress --color",
+    "build-all": "webpack --progress --color && webpack --config webpack.config.all.js --progress --color",
     "test": "node_modules/karma/bin/karma start"
   },
   "homepage": "https://github.com/GoogleChrome/omnitone",
