--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "copy-webpack-plugin": "^3.0.1",
+    "jsdoc": "^3.5.4",
     "karma": "^1.6.0",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.0.0",
