--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "omnitone",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Spatial Audio Decoder in Web Audio API",
   "main": "build/omnitone.js",
   "keywords": [
@@ -12,7 +12,9 @@
   ],
   "devDependencies": {
     "chai": "^3.5.0",
-    "copy-webpack-plugin": "^3.0.1",
+    "copy-webpack-plugin": "^4.0.1",
+    "eslint": "^4.7.0",
+    "eslint-config-google": "^0.9.1",
     "jsdoc": "^3.5.4",
     "karma": "^1.6.0",
     "karma-chai": "^0.1.0",
@@ -20,13 +22,15 @@
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.3",
     "mocha": "^3.0.0",
-    "webpack": "^1.13.0"
+    "uglifyjs-webpack-plugin": "^1.0.0-beta.2",
+    "webpack": "^3.6.0"
   },
   "scripts": {
     "build": "webpack --progress --color",
     "build-all": "webpack --progress --color && webpack --config webpack.config.all.js --progress --color",
     "build-omnitone-hrir": "./build-hrir.sh",
     "build-doc": "node_modules/.bin/jsdoc src/omnitone.js -d doc/",
+    "eslint": "./node_modules/.bin/eslint src/*",
     "test": "node_modules/karma/bin/karma start",
     "watch": "webpack --progress --color --watch"
   },
