Replace PCM HRIR with Base64-encoded

--- a/.npmignore
+++ b/.npmignore
@@ -1,10 +1,10 @@
 # Omnitone NPM module must include only the production build and resource files.
-
 doc/
 examples/
 pvt/
 src/
-
+.eslintignore
+.eslintrc.js
 .firebaserc
 .gitignore
 .travis.yml
@@ -12,3 +12,7 @@ src/
 CONTRIBUTING.md
 database.rules.json
 firebase.json
+generate-hrir-base64.js
+generate-hrir-wave.sh
+webpack.config.all.js
+webpack.config.js
