--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "scripts": {
     "build": "webpack --progress --color",
     "build-all": "webpack --progress --color && webpack --config webpack.config.all.js --progress --color",
-    "build-hrir": "./build-hrir.sh && node generate-hrir-base64.js",
+    "build-hrir": "./generate-hrir-wave.sh && node generate-hrir-base64.js",
     "build-doc": "node_modules/.bin/jsdoc src/omnitone.js -d doc/",
     "eslint": "./node_modules/.bin/eslint src/*",
     "test": "node_modules/karma/bin/karma start",
