--- a/package.json
+++ b/package.json
@@ -42,5 +42,6 @@
     "url": "https://github.com/GoogleChrome/omnitone/issues"
   },
   "author": "The Chromium Authors",
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "dependencies": {}
 }
