--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
     "url": "https://github.com/GoogleChrome/omnitone/issues"
   },
   "author": "The Chromium Authors",
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "dependencies": {
+    "npm": "^5.7.1"
+  }
 }
