--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "jsdoc": "^3.5.5",
     "karma": "^2.0.2",
     "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^2.0.0",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.5",
     "marked": "^0.3.19",
@@ -25,6 +25,9 @@
     "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "^4.7.0",
     "webpack-cli": "^2.1.2"
+  },
+  "optionalDependencies": {
+    "fsevents": "1.1.3"
   },
   "scripts": {
     "build": "webpack --mode production --progress --color",
