--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "omnitone",
-  "version": "1.2.3",
+  "version": "1.2.4",
   "description": "Spatial Audio Decoder in Web Audio API",
   "main": "build/omnitone.js",
   "keywords": [
@@ -30,8 +30,8 @@
     "fsevents": "1.1.3"
   },
   "scripts": {
-    "build": "webpack --mode production --progress --color",
-    "build-all": "webpack --mode production --progress --color && webpack --mode production --config webpack.config.all.js --progress --color",
+    "build": "webpack --mode development --progress --color",
+    "build-all": "webpack --mode development --progress --color && webpack --mode production --config webpack.config.all.js --progress --color",
     "build-hrir": "node src/resources/build-hrir-base64.js",
     "build-doc": "node_modules/.bin/jsdoc src/omnitone.js -d doc/",
     "eslint": "./node_modules/.bin/eslint src/*",
