--- a/package.json
+++ b/package.json
@@ -23,18 +23,17 @@
     "lodash": ">=4.17.5",
     "marked": "^0.5.0",
     "mocha": "^5.2.0",
-    "uglifyjs-webpack-plugin": "^1.3.0",
-    "webpack": "^4.17.2",
-    "webpack-cli": "^3.1.0"
+    "rollup": "^1.1.0",
+    "rollup-plugin-cleanup": "^3.1.0",
+    "rollup-plugin-terser": "^4.0.2",
+    "rollup-plugin-uglify": "^6.0.1",
   },
   "scripts": {
-    "build": "webpack --mode development --progress --color",
-    "build-all": "webpack --mode development --progress --color && webpack --mode production --config webpack.config.all.js --progress --color",
+    "build": "rollup -c",
     "build-hrir": "node src/resources/build-hrir-base64.js",
     "build-doc": "node_modules/.bin/jsdoc src/omnitone.js -d doc/",
     "eslint": "./node_modules/.bin/eslint src/*",
-    "test": "node_modules/karma/bin/karma start",
-    "watch": "webpack --progress --color --watch"
+    "test": "node_modules/karma/bin/karma start"
   },
   "homepage": "https://github.com/GoogleChrome/omnitone",
   "repository": {
