--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "Web Audio API"
   ],
   "devDependencies": {
+    "chai": "^4.2.0",
     "eslint": "^5.12.0",
     "eslint-config-google": "^0.11.0",
     "jsdoc": "^3.5.5",
@@ -21,10 +22,10 @@
     "karma-mocha-reporter": "^2.2.5",
     "lodash": "^4.17.11",
     "marked": "^0.6.0",
+    "mocha": "^5.2.0",
     "rollup": "^1.1.0",
     "rollup-plugin-cleanup": "^3.1.0",
-    "rollup-plugin-terser": "^4.0.2",
-    "rollup-plugin-uglify": "^6.0.1"
+    "rollup-plugin-terser": "^4.0.2"
   },
   "scripts": {
     "build": "rollup -c",
